force-app/main/default/objects/Category__c/fields/Parent_Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>