force-app/main/default/objects/Category__c/fields/Validated_Date__c.field-meta.xml
<CustomField>
    <fullName>Validated_Date__c</fullName>
    <label>Validated Date</label>
    <type>Date</type>
</CustomField>